--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">
                     Researching Devices that
                     <br>
-                    <span class="gradient-text"> Making Our Lives Fun</span>
+                    <span class="gradient-text"> Make Our Lives Fun</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto">
                     HCI researcher exploring novel devices to enhance user experiences in Desktop, Laptop, VR/AR, and so on.
