--- a/index.html
+++ b/index.html
@@ -380,11 +380,12 @@
                                     <div class="flex flex-col md:flex-row items-start gap-6">
                                         <div class="flex-grow">
                                             <h4 class="publication-title text-xl font-bold text-gray-900 dark:text-white">StringTouch: A Non-occlusive 3DoF Haptic Interface using String Structures for Modulating Finger Sensations</h4>
-                                            <p class="text-gray-700 dark:text-gray-300 mt-1"><strong>Y. Kim</strong>, J.Yim, Y. Yun, D. Ko, G. Lee</p>
+                                            <p class="text-gray-700 dark:text-gray-300 mt-1"><strong>Y. Kim</strong>, J. Yim, Y. Yun, D. Ko, G. Lee</p>
                                             <p class="text-gray-500 dark:text-gray-400 italic mt-1">The 38th Annual ACM Symposium on User Interface Software and Technology (UIST), 2025 (Accepted)</p>
                                         </div>
                                         <div class="flex-shrink-0 mt-4 md:mt-0 space-x-2">
-                                             <a href="#" class="bg-amber-500 text-white px-4 py-2 rounded-md text-sm font-semibold hover:bg-amber-600 transition-colors">TBD</a>
+                                             <a href="https://dl.acm.org/doi/10.1145/3746059.3747658" class="bg-amber-500 text-white px-4 py-2 rounded-md text-sm font-semibold hover:bg-amber-600 transition-colors">DOI</a>
+                                             <a href="assets/stringTouch.pdf" class="bg-gray-700 text-white px-4 py-2 rounded-md text-sm font-semibold hover:bg-gray-800 transition-colors">Paper</a>
                                         </div>
                                     </div>
                                     <div class="mt-4 flex flex-wrap gap-2 items-center">
