--- a/index.html
+++ b/index.html
@@ -1043,12 +1043,10 @@ if (top.length === 0) {
 
                 return `
                     <div class="pub-links-detailed flex flex-wrap gap-2 justify-start md:justify-end">
-                        ${detailed.join('
-')}
+                        ${detailed.join('')}
                     </div>
                     <div class="pub-links-compact flex flex-wrap gap-3 justify-start md:justify-end">
-                        ${compact.join('
-')}
+                        ${compact.join('')}
                     </div>
                 `;
             };
