--- a/index.html
+++ b/index.html
@@ -329,17 +329,17 @@
         /* ------------------------------------------------------------
            News Timeline (Index Page)
         ------------------------------------------------------------ */
-        .news-timeline {
+        
+.news-timeline {
             position: relative;
-            padding-left: 2.75rem; /* space for line + markers */
             display: flex;
             flex-direction: column;
-            gap: 0.65rem;
+            gap: 0.55rem;
         }
         .news-timeline::before {
             content: "";
             position: absolute;
-            left: 1.05rem;
+            left: 0.85rem; /* aligns with marker center */
             top: 0.15rem;
             bottom: 0.15rem;
             width: 1px;
@@ -349,36 +349,19 @@
             background: rgba(71, 85, 105, 0.85); /* slate-600-ish */
         }
 
-        .news-timeline-item {
+        /* Each row (clickable) */
+        .news-timeline-entry {
             position: relative;
             display: flex;
             align-items: center;
-            gap: 0.8rem;
-            padding: 0.48rem 0.9rem;
-            border-radius: 0.95rem;
-            border: 1px solid rgba(226, 232, 240, 0.95);
-            background: rgba(255, 255, 255, 0.86);
-            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.045);
-            transition: transform 0.18s ease, box-shadow 0.18s ease, border-color 0.18s ease;
-        }
-        .dark .news-timeline-item {
-            border-color: rgba(55, 65, 81, 0.95);
-            background: rgba(31, 41, 55, 0.78);
-            box-shadow: 0 2px 14px rgba(0, 0, 0, 0.28);
-        }
-
-        .news-timeline-item:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 10px 26px rgba(0, 0, 0, 0.08);
-            border-color: rgba(245, 158, 11, 0.45);
-        }
-        .dark .news-timeline-item:hover {
-            box-shadow: 0 14px 32px rgba(0, 0, 0, 0.38);
+            gap: 0.9rem;
+            text-decoration: none;
+            cursor: pointer;
         }
 
         .news-timeline-marker {
             position: absolute;
-            left: 1.05rem;
+            left: 0.85rem;
             top: 50%;
             transform: translate(-50%, -50%);
             width: 10px;
@@ -391,19 +374,48 @@
             box-shadow: 0 0 0 4px rgba(17, 24, 39, 0.95);
         }
 
+        /* Month label next to the marker (outside the pill) */
         .news-timeline-date {
             font-size: 0.74rem;
             font-weight: 700;
             color: #6b7280; /* gray-500 */
-            min-width: 84px;
+            min-width: 104px;
+            padding-left: 1.55rem; /* space for marker */
             letter-spacing: 0.2px;
+            white-space: nowrap;
         }
         .dark .news-timeline-date {
             color: #94a3b8; /* slate-400 */
         }
 
+        /* Pill (title only) */
+        .news-timeline-item {
+            flex: 1 1 auto;
+            display: block;
+            padding: 0.46rem 0.9rem;
+            border-radius: 0.95rem;
+            border: 1px solid rgba(226, 232, 240, 0.95);
+            background: rgba(255, 255, 255, 0.86);
+            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.045);
+            transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+        }
+        .dark .news-timeline-item {
+            border-color: rgba(55, 65, 81, 0.95);
+            background: rgba(31, 41, 55, 0.78);
+            box-shadow: 0 2px 14px rgba(0, 0, 0, 0.28);
+        }
+
+        .news-timeline-entry:hover .news-timeline-item {
+            transform: translateY(-1px);
+            box-shadow: 0 10px 26px rgba(0, 0, 0, 0.08);
+            border-color: rgba(245, 158, 11, 0.45);
+        }
+        .dark .news-timeline-entry:hover .news-timeline-item {
+            box-shadow: 0 14px 32px rgba(0, 0, 0, 0.38);
+        }
+
         .news-timeline-title {
-            font-size: 0.90rem; /* smaller than before */
+            font-size: 0.88rem; /* slightly smaller */
             font-weight: 600;
             color: #111827;
             line-height: 1.25;
@@ -414,8 +426,12 @@
         }
         .dark .news-timeline-title { color: #f3f4f6; }
 
-        .news-timeline-item:hover .news-timeline-title { color: #d97706; } /* amber-600 */
-        .dark .news-timeline-item:hover .news-timeline-title { color: #fcd34d; } /* amber-300 */
+        .news-timeline-entry:hover .news-timeline-title { color: #d97706; } /* amber-600 */
+        .dark .news-timeline-entry:hover .news-timeline-title { color: #fcd34d; } /* amber-300 */
+
+        @media (max-width: 420px){
+            .news-timeline-date { min-width: 92px; }
+        }
 
 
         /* ------------------------------------------------------------
@@ -480,11 +496,28 @@
             margin-top: 0 !important;
         }
 
+        /* Hide year headers + remove inter-item spacing (Tailwind space-y-8) */
+        #publications.pub-compact .year-section > h3 {
+            display: none !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            border: 0 !important;
+        }
+        #publications.pub-compact .space-y-8 > :not([hidden]) ~ :not([hidden]) {
+            margin-top: 0 !important;
+            margin-bottom: 0 !important;
+        }
+
+        /* Make each item a dense, borderless row (no partitions) */
         #publications.pub-compact .publication-item {
-            padding: 0.9rem 1rem !important;
+            padding: 0.12rem 0 !important;
+            background: transparent !important;
+            box-shadow: none !important;
+            border-width: 0 !important;
+            border-radius: 0 !important;
         }
         #publications.pub-compact .pub-top {
-            gap: 0.75rem !important;
+            gap: 0.45rem !important;
             flex-direction: row !important;
             flex-wrap: wrap;
             align-items: flex-start;
@@ -497,20 +530,21 @@
         }
         #publications.pub-compact .pub-authors {
             font-size: 0.90rem !important;
-            margin-top: 0.25rem !important;
+            margin-top: 0.22rem !important;
         }
         #publications.pub-compact .pub-venue {
             font-size: 0.82rem !important;
-            margin-top: 0.12rem !important;
+            margin-top: 0.10rem !important;
         }
 
         #publications.pub-compact .pub-links-detailed { display: none !important; }
         #publications.pub-compact .pub-links-compact { 
             display: flex !important;
-            gap: 0.9rem;
+            gap: 0.75rem;
             flex-wrap: wrap;
             justify-content: flex-start;
         }
+
 </style>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -959,10 +993,12 @@ const formatNewsDate = (iso = '') => {
                 const monthYear = formatNewsMonthYear(dateIso);
 
                 return `
-                    <a href="news.html#post-${escapeHtml(id)}" class="news-timeline-item group" aria-label="${escapeHtml(title)} (${escapeHtml(formatNewsDate(dateIso))})">
+                    <a href="news.html#post-${escapeHtml(id)}" class="news-timeline-entry group" aria-label="${escapeHtml(title)} (${escapeHtml(formatNewsDate(dateIso))})">
                         <span class="news-timeline-marker" aria-hidden="true"></span>
                         <span class="news-timeline-date">${escapeHtml(monthYear)}</span>
-                        <span class="news-timeline-title">${escapeHtml(title)}</span>
+                        <span class="news-timeline-item">
+                            <span class="news-timeline-title">${escapeHtml(title)}</span>
+                        </span>
                     </a>
                 `;
             };
@@ -1212,13 +1248,10 @@ if (top.length === 0) {
                     requestAnimationFrame(refreshPublicationHeights);
                 };
 
-                const savedView = (() => {
-                    try { return localStorage.getItem('pubViewMode'); } catch (_) { return null; }
-                })();
+                                // Default view: Compact
+                applyPublicationViewMode('compact');
 
-                applyPublicationViewMode(savedView === 'compact' ? 'compact' : 'detailed');
-
-                if (viewDetailedBtn) {
+if (viewDetailedBtn) {
                     viewDetailedBtn.addEventListener('click', () => {
                         try { localStorage.setItem('pubViewMode', 'detailed'); } catch (_) {}
                         applyPublicationViewMode('detailed');
